# Auto_job_applier_linkedIn

./: .gitignore  README.md  build_exclude.txt  build_windows.bat  config_ui.py  install.ps1  install.sh  linkedin_cookies.pkl  openclaw_channels_help.txt  openclaw_help.txt  openclaw_models_help.txt  openclaw_webhooks_help.txt  requirements.txt  runAiBot.py  start.sh  start_bot_automated.bat  start_bot_automated.bat.lnk  start_servers.bat  stop_bot.bat  stop_servers.bat  supervisor.py  test_chrome_minimal.py  test_openclaw_cli.py
backend/: .env.test  README.md  app_paths.py  app_version.py  db_manager.py  linkdapply-backend.spec  linkdapply_backend_entry.py  manual_login_seed.py  migrate_configs.py  migrate_configs_owner.py  migrate_encryption.py  migrate_to_pg.py  models.py  pyproject.toml  pytest.ini  requirements.txt  run.ps1  run.sh  runAiBot.py  server.py  server.spec  supervisor.py  test_data.db
backend/config/: config_bridge.py  search.py  settings.py
backend/config/old_backups/: settings.py
backend/config/utils/: debug_logs.py  logger.py  user_resolution.py
backend/data/: community_seed.py
backend/linkedin_automation/: .gitignore  README.md  __init__.py  __main__.py  config.py  content_calendar.txt  content_generator.py  driver.py  linkedin_bot.py  linkedin_interaction.py  openai_client.py  topics.txt
backend/linkedin_automation/linkedin_ui/: __init__.py  arg_parser.py  base.py  composer.py  engage.py  (+14 more)
backend/modules/: clickers_and_finders.py  gui_safe.py  helpers.py  human_actions.py  open_chrome.py  validator.py
backend/routes/: applications.py  billing.py  bot.py  community.py  config_parse.py  config_routes.py  feedback.py  health.py  linkedin_accounts.py  linkedin_automation.py  razorpay.py  uploads.py
backend/run_ai_bot/: __init__.py  bootstrap_env.py  easy_apply.py  external_apply.py  form_answer_helpers.py  humanize.py  job_details.py  login.py  main.py  pipeline.py  reporting.py  search_filters.py  session.py  state.py
backend/scratch/: check_all_schemas.py  check_click_gap.py  check_db.py  check_schema.py  check_settings.py  init_bot_speed.py  list_search_settings.py  list_settings.py  migrate_db.py  verify_fix.py
backend/services/: admin.py  billing_emails.py  bot_config_cache.py  bot_supervisor.py  chrome_ports.py  chrome_profiles.py  cloud_billing.py  connect_campaigns.py  email.py  linkedin_automation.py  linkedin_env.py  linkedin_session.py  payu.py  plan_limits.py  smart_rate_limit.py  storage.py  supervisor_state.py
backend/setup/: setup.sh
backend/tests/: conftest.py  saas_diagnostic.py  test_app_paths_env.py  test_billing.py  test_bot.py  test_bot_config_cache.py  test_chrome_ports.py  test_chrome_profiles.py  test_community.py  test_config.py  test_config_bridge.py  test_config_parse.py  test_db_indexes.py  test_debug_logs.py  test_email_service.py  test_encryption.py  test_engage_new_dom.py  test_feedback.py  test_health.py  test_linkedin_accounts_route.py  test_linkedin_automation.py  test_linkedin_automation_imports.py  test_linkedin_supervisor_accounts.py  test_payu.py  test_profile_search.py  test_smart_rate_limit.py  test_subscription_limits.py  test_user_resolution.py
backend/utils/: debug_logs.py  encryption.py  logger.py  secrets.py  user_resolution.py
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
(+137 files in other folders)
