[project]
name = "auto-job-applier-backend"
version = "0.1.0"
description = "FastAPI + Selenium backend for the LinkedIn job applier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "undetected-chromedriver",
    "selenium",
    "pyautogui",
    "setuptools",
    "openai",
    "flask-cors",
    "flask",
    "python-dotenv",
    "google-generativeai",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "stripe",
    "sqlalchemy",
    "cryptography",
    "pydantic",
    "pytest",
    "httpx",
    "pytest-asyncio",
    "pytest-cov",
]

# Application project: lock deps with uv, but do not install this tree as an importable package.
[tool.uv]
package = false
