[project]
name = "auto-job-applier-backend"
version = "0.1.0"
description = "FastAPI + Selenium backend for the LinkedIn job applier"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "undetected-chromedriver",
    "selenium",
    "pyautogui",
    "setuptools",
    "openai",
    "python-dotenv",
    "google-generativeai",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "stripe",
    "sqlalchemy",
    "cryptography",
    "pydantic",
    "pytest",
    "httpx",
    "pytest-asyncio",
    "pytest-cov",
    # Linkedln-Automation-Framework integration (posting / engagement / calendar)
    "webdriver-manager",
    "requests",
    "sumy>=0.11.0",
    "nltk>=3.8.1",
    "psycopg2-binary>=2.9.12",
]

# Application project: lock deps with uv, but do not install this tree as an importable package.
[tool.uv]
package = false
