[package]
name = "linkdapply-desktop"
version = "0.1.0"
description = "LinkdApply desktop launcher"
authors = ["LinkdApply"]
edition = "2021"

[lib]
name = "linkdapply_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "5"
dotenvy = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
